now with logo and style

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,14 @@
 html
+
   head
+
+    style
+      include ../styles/index.css
+
     title= title
+
+
   body
-    h1= message
+
+    div.frame
+      img.center(src="assets/images/logo.png")
